@@ -27,6 +27,7 @@
 * Improved database size reporting on system settings page
 * Added DateTimeUtility for Meta Data Scripts
 * Fixed bug where DO NOT LOG Alarm levels were being added to the Database when they Returned to normal.
+* Changed Point Value import to ignore Blank and Empty XLS and XLSX rows.
 
 
 *Version 2.4.3*
